--- a/config.toml
+++ b/config.toml
@@ -21,14 +21,19 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "Publications"
     url = "/publications/"
     weight =2
+    
+[[menu.main]]
+    name = "Data"
+    url = "/data/"
+    weight =3
 [[menu.main]]
     name = "GitHub"
    url = "https://github.com/dylancraven"
-  weight =4
+  weight =5
 [[menu.main]]
     name = "Twitter"
     url = "https://twitter.com/DylanJCraven"
-    weight =3
+    weight =4
 [params]
     description = "A website built through Hugo and blogdown."
 
@@ -46,6 +51,6 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [params.logo]
     url = "logo.png"
-    width = 100
-    height = 100
+    width = 75
+    height = 75
     alt = "Logo"
