--- a/config.toml
+++ b/config.toml
@@ -21,11 +21,15 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "Publications"
     url = "/publications/"
     weight =2
-    
+[[menu.main]]
+    name = "Oportunidades"
+    url = "/join/"
+    weight =3    
 [[menu.main]]
     name = "Data"
     url = "/data/"
     weight =3
+    
 [[menu.main]]
     name = "GitHub"
    url = "https://github.com/dylancraven"
