--- a/config.toml
+++ b/config.toml
@@ -22,14 +22,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/publications/"
     weight =2
 [[menu.main]]
-    name = "Oportunidades"
+    name = "Join!/Unete!"
     url = "/join/"
     weight =3    
 [[menu.main]]
     name = "Data"
     url = "/data/"
-    weight =3
-    
+    weight =4
 [[menu.main]]
     name = "GitHub"
    url = "https://github.com/dylancraven"
@@ -37,7 +36,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[menu.main]]
     name = "Twitter"
     url = "https://twitter.com/DylanJCraven"
-    weight =4
+    weight =6
 [params]
     description = "A website built through Hugo and blogdown."
 
