--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/publications/"
     weight =2
 [[menu.main]]
+    name = "Team"
+    url = "/equipo/"
+    weight =3   
+[[menu.main]]
     name = "Join!/Unete!"
     url = "/join/"
     weight =3    
