--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:title"
 
 [[menu.main]]
-    name = "Home"
+    name = "About"
     url = "/about/"
     weight =1
 
@@ -39,6 +39,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "Data"
     url = "/data/"
     weight =6
+        
     
 #[[menu.main]]
 #    name = "GitHub"
