--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
-theme = "hugo-universal-theme"
+theme = "hugo-lithium"
 style="green"
 
 googleAnalytics = "UA-152694415-1"
@@ -12,7 +12,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:title"
 
 [[menu.main]]
-    name = "About"
+    name = "Home"
     url = "/about/"
     weight =1
 
@@ -49,11 +49,6 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 #    name = "Twitter"
 #    url = "https://twitter.com/DylanJCraven"
 #    weight =7
-
-[params.widgets]
-    search = true
-    categories = true
-    tags = true
 
 [params]
     description = "A website built through Hugo and blogdown."
