--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [[menu.main]]
     name = "Home"
-    url = "/about/"
+    url = "/_index/"
     weight =1
 
 [[menu.main]]
@@ -63,4 +63,4 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "trees.png"
+    favicon = "images/logo.png"
