--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "logo.png"
+    #favicon = "logo.png"
 
     [params.logo]
     url = "logo.png"
