--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     weight =5
     
 [params]
-    description = "A website built through Hugo and blogdown."
+    #description = "A website built through Hugo and blogdown."
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
@@ -47,7 +47,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    #favicon = "logo.png"
+    favicon = "logo.png"
 
     [params.logo]
     url = "logo.png"
