--- a/config.toml
+++ b/config.toml
@@ -47,10 +47,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "logo.png"
+    favicon = "solo_verde.png"
 
     [params.logo]
-    url = "logo.png"
+    url = "solo_verde.png"
     width = 50
     height = 50
     alt = "Home"
