--- a/config_2.toml
+++ b/config_2.toml
@@ -2,7 +2,7 @@ baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
 theme = "hugo-lithium"
-style="green"
+style="blue"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
@@ -50,10 +50,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "favicon.png"
+    favicon = "solo_verde.png"
 
     [params.logo]
-    url = "logo.png"
+    url = "solo_verde.png"
     width = 50
     height = 50
     alt = "Logo"
