--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
-theme = "hugo-lithium"
-style="green"
+theme = "hugo-tranquilpeak-theme"
+
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
