--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
 baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
-theme = "hugo-tranquilpeak-theme"
-
+theme = "hugo-universal"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
