--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
-theme = "hugo-universal"
+theme = "hugo-lithium"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
