--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
 
     # path to the favicon, under "static"
-    favicon = "logo.png"
+    favicon = "favicon.ico"
 
     [params.logo]
     url = "logo.png"
