--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,10 @@ baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
 theme = "hugo-lithium"
-google_fonts = "family=B612+Mono&family=Open+Sans"
+googlefonts = ["Overpass Mono", "Overpass Mono"]
+ fontbody = 'Overpass Mono'
+ fontcode = 'Overpass Mono'
+
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
