--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
 theme = "hugo-lithium"
-
+font = "OverpassMono"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
@@ -51,8 +51,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [params.logo]
     url = "logo.png"
-    width = 75
-    height = 75
+    width = 100
+    height = 100
     alt = "Home"
 
 [markup]
