--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,9 @@ baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
 theme = "hugo-lithium"
-font = "OverpassMono"
+day_night = true
+font = "Overpass Mono"
+font_size = "M"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
