--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,8 @@
 baseurl = "https://www.dylancraven.com"
 languageCode = "en-us"
 title = "Dylan Craven"
-theme = "hugo-lithium"
+theme = "hugo-academic"
 day_night = true
-font = "Overpass Mono"
-font_size = "M"
 
 googleAnalytics = "UA-152694415-1"
 disqusShortname = ""
