--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,9 @@ googleAnalytics = "UA-152694415-1"
 #  subtitle = "Build a beautiful and simple website in minutes"
   mainSections = ["Research","Publications","Team","Join","Data"]
   logo = "img/solo_verde2_notext.png" # Expecting square dimensions
+     width = 250
+     height = 250
+     alt = "Home"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
   commit = true
@@ -54,7 +57,7 @@ googleAnalytics = "UA-152694415-1"
   #bitbucket = "username"
   twitter = "@DylanJCraven"
   #reddit = "username"
-  #linkedin = "username"
+  #linkedin = "dylancraven@aya.yale.edu"
   #xing = "username"
   #stackoverflow = "users/XXXXXXX/username"
   #snapchat = "username"
