--- a/config.toml
+++ b/config.toml
@@ -15,9 +15,9 @@ googleAnalytics = "UA-152694415-1"
   homeTitle = "Functional Ecology & Biogeography" # Set a different text for the header on the home page
 #  subtitle = "Build a beautiful and simple website in minutes"
   mainSections = ["Research","Team","Join","Publications","Data"]
-  logo = "img/solo_verde33_notext.png" # Expecting square dimensions
-     width = 250
-     height = 250
+  logo = "img/logo.png" # Expecting square dimensions
+     width = 350
+     height = 350
      alt = "Home"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
@@ -55,7 +55,7 @@ googleAnalytics = "UA-152694415-1"
   github = "https://github.com/dylancraven"
   #gitlab = "username"
   #bitbucket = "username"
-  twitter = "@DylanJCraven"
+  twitter = "DylanJCraven"
   #reddit = "username"
   #linkedin = "dylancraven@aya.yale.edu"
   #xing = "username"
