--- a/config.toml
+++ b/config.toml
@@ -58,11 +58,11 @@ googleAnalytics = "G-6D712T1JVB"
   #bitbucket = "username"
   twitter = "DylanJCraven"
   #reddit = "username"
-  #linkedin = "dylancraven@aya.yale.edu"
+  linkedin = "dylancraven@aya.yale.edu"
   #xing = "username"
   #stackoverflow = "users/XXXXXXX/username"
   #snapchat = "username"
-  #instagram = "username"
+  instagram = "dylan.j.craven"
   #youtube = "user/username" # or channel/channelname
   #soundcloud = "username"
   #spotify = "username"
