--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ googleAnalytics = "G-6D712T1JVB"
      height = 350
      alt = "Home"
   favicon = "img/favicon.ico"
-  dateFormat = "January 2, 2006"
+  dateFormat = "2006"
   commit = true
   #rss = true
   comments = true
